[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aoc"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "rubalo", email = "rubalo@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "click",
  "gitpython",
  "ipdb",
  "requests",
]

[project.urls]
Documentation = "https://github.com/rubalo/aoc#readme"
Issues = "https://github.com/rubalo/aoc/issues"
Source = "https://github.com/rubalo/aoc"

[project.scripts]
aoc = "aoc.cli:aoc"

[tool.hatch.version]
path = "src/aoc/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/aoc tests}"

[tool.coverage.run]
source_pkgs = ["aoc", "tests"]
branch = true
parallel = true
omit = [
  "src/aoc/__about__.py",
]

[tool.coverage.paths]
aoc = ["src/aoc", "*/aoc/src/aoc"]
tests = ["tests", "*/aoc/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
