[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "aoc"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.12"
keywords = []
authors = [{ name = "rubalo", email = "rubalo@users.noreply.github.com" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "click",
  "gitpython",
  "pyvis",
  "matplotlib",
  "networkx",
  "numpy",
  "requests",
  "sympy",
  "pygame>=2.6.1",
]

[project.urls]
Documentation = "https://github.com/rubalo/aoc#readme"
Issues = "https://github.com/rubalo/aoc/issues"
Source = "https://github.com/rubalo/aoc"

[project.scripts]
aoc = "aoc.cli:aoc"

[tool.setuptools_scm]
version_file = "src/aoc/__about__.py"

[tool.coverage.run]
source_pkgs = ["aoc", "tests"]
branch = true
parallel = true
omit = ["src/aoc/__about__.py"]

[tool.coverage.paths]
aoc = ["src/aoc", "*/aoc/src/aoc"]
tests = ["tests", "*/aoc/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

[dependency-groups]
dev = [
  "ipdb>=0.13.13",
  "pre-commit>=4.1.0",
  "pytest>=8.3.4",
  "setuptools-scm>=8.1.0",
]

[tool.isort]
profile = "black"

[tool.uv]
reinstall-package = ["aoc"]
